included testfile for the junit-test